[package]
name = "orb_fdw"
version = "0.12.2"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg16"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14", "supabase-wrappers/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15", "supabase-wrappers/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16", "supabase-wrappers/pg16"]
pg_test = []

[dependencies]
pgrx = "=0.11.3"
orb-billing = "0.11.0"
supabase-wrappers = { version = "0.1.18", default-features = false }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
thiserror = "1.0.48"
futures = "0.3.28"

[dev-dependencies]
pgrx-tests = "=0.11.3"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
